k8s/health/ingress-for-db-ha.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chaos-demo-for-db-ha
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: chaos-dbha.c6c48265dd59a479bb7569d448c2969eb.cn-shenzhen.alicontainer.com
    http:
      paths:
      - backend:
          serviceName: chaos-demo-for-db-ha
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: chaos-demo-for-db-ha
  labels:
    app: chaos-demo-for-db-ha
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: chaos-demo-for-db-ha
